--- a/style/style.css
+++ b/style/style.css
@@ -1,120 +1,421 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
+  font-family: "poppins", sans-serif;
+}
+
+html {
+  font-size: 62.5%;
+  /* 1rem = 10px  */
+  /* scroll-behavior: smooth; */
+  -ms-scroll-snap-type: Y proximity;
+  scroll-snap-type: Y proximity;
+  overflow-x: hidden;
+}
+body {
+  overflow-x: hidden;
 }
 
 :root {
-  --yello-color: #fcd21c;
-  --back-color: #3b3b3b;
+  --bg-color: #6c63ff;
   --white-color: #fff;
-}
-
-/* Element specific font sizes */
-h1 {
-  font-size: clamp(
-    1.5rem,
-    4vw + 1rem,
-    2.5rem
-  ); /* Scales between 24px and 40px */
-}
-
-h2 {
-  font-size: clamp(
-    1.25rem,
-    3vw + 1rem,
-    2rem
-  ); /* Scales between 20px and 32px */
-}
-
-h3 {
-  font-size: clamp(
-    1.125rem,
-    2.5vw + 1rem,
-    1.75rem
-  ); /* Scales between 18px and 28px */
-}
-
-h4 {
-  font-size: clamp(1rem, 2vw + 1rem, 1.5rem); /* Scales between 16px and 24px */
-}
-
-p,
-li,
-a,
-span {
-  font-size: clamp(
-    0.875rem,
-    1.5vw + 1rem,
-    1rem
-  ); /* Scales between 14px and 16px */
+  --black-color: #2f2e43;
 }
 
 .container {
-  width: 142rem;
+  max-width: 142rem;
   margin: 0 auto;
   padding: 9.6rem 2.4rem;
 }
 
 .grid {
+  display: -ms-grid;
   display: grid;
-  gap: 5rem;
 }
+
 .grid-two--cols {
+  /* -ms-grid-columns: (1fr) [2]; */
   grid-template-columns: repeat(2, 1fr);
 }
+.grid-three--cols {
+  /* -ms-grid-columns: (1fr) [3]; */
+  grid-template-columns: repeat(3, 1fr);
+}
 
-/*+++++++++++++++++++ Navbar section +++++++++++++++++++*/
+.grid-four--cols {
+  /* -ms-grid-columns: (1fr) [4]; */
+  grid-template-columns: repeat(4, 1fr);
+}
 
-nav {
-  background-color: green;
-  color: white;
+/* hover effect button css  */
+a button {
+  /* color: var(--black-color); */
+  padding: 1rem 3rem;
+  font-size: 2rem;
+  margin-top: 2rem;
+  border: 2px solid var(--black-color);
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  text-align: center;
+  transition: 0.3s;
+  z-index: 1;
+  color: var(--white-color);
+}
+
+a button::before {
+  content: "";
+  width: 0;
+  height: 300%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background-color: var(--black-color);
+  transition: 0.5s ease;
+  display: block;
+  z-index: -1;
+}
+a button:hover::before {
+  width: 105%;
+}
+a button:hover {
+  color: #ffffff;
+}
+/* hover effect button css  */
+
+/************************** home seciton css craker **************************/
+
+@keyframes firework {
+  0% {
+    transform: translate(var(--x), var(--initialY));
+    width: var(--initialSize);
+    opacity: 1;
+  }
+  50% {
+    width: 0.5vmin;
+    opacity: 1;
+  }
+  100% {
+    width: var(--finalSize);
+    opacity: 0;
+  }
+}
+
+/* @keyframes fireworkPseudo {
+  0% { transform: translate(-50%, -50%); width: var(--initialSize); opacity: 1; }
+  50% { width: 0.5vmin; opacity: 1; }
+  100% { width: var(--finalSize); opacity: 0; }
+}
+ */
+.firework,
+.firework::before,
+.firework::after {
+  --initialSize: 0.5vmin;
+  --finalSize: 45vmin;
+  --particleSize: 0.2vmin;
+  --color1: yellow;
+  --color2: khaki;
+  --color3: white;
+  --color4: lime;
+  --color5: gold;
+  --color6: mediumseagreen;
+  --y: -30vmin;
+  --x: -50%;
+  --initialY: 60vmin;
+  content: "";
+  animation: firework 2s infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, var(--y));
+  width: var(--initialSize);
+  aspect-ratio: 1;
+  background: 
+    /*
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 0%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 0%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 100%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 100%,
+    */ radial-gradient(
+        circle,
+        var(--color1) var(--particleSize),
+        #0000 0
+      )
+      50% 0%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 100% 50%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 50% 100%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 0% 50%,
+    /* bottom right */
+      radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 80%
+      90%,
+    radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 95% 90%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 90% 70%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 100% 60%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 55% 80%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 70% 77%,
+    /* bottom left */
+      radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 22%
+      90%,
+    radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 45% 90%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 33% 70%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 10% 60%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 31% 80%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 28% 77%,
+    radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 13% 72%,
+    /* top left */
+      radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 80%
+      10%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 95% 14%,
+    radial-gradient(circle, var(--color2) var(--particleSize), #0000 0) 90% 23%,
+    radial-gradient(circle, var(--color3) var(--particleSize), #0000 0) 100% 43%,
+    radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 85% 27%,
+    radial-gradient(circle, var(--color5) var(--particleSize), #0000 0) 77% 37%,
+    radial-gradient(circle, var(--color6) var(--particleSize), #0000 0) 60% 7%,
+    /* top right */
+      radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 22%
+      14%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 45% 20%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 33% 34%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 10% 29%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 31% 37%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 28% 7%,
+    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 13% 42%;
+  background-size: var(--initialSize) var(--initialSize);
+  background-repeat: no-repeat;
+}
+
+.firework::before {
+  --x: -50%;
+  --y: -50%;
+  --initialY: -50%;
+  /*   transform: translate(-20vmin, -2vmin) rotate(40deg) scale(1.3) rotateY(40deg); */
+  transform: translate(-50%, -50%) rotate(40deg) scale(1.3) rotateY(40deg);
+  /*   animation: fireworkPseudo 2s infinite; */
+}
+
+.firework::after {
+  --x: -50%;
+  --y: -50%;
+  --initialY: -50%;
+  /*   transform: translate(44vmin, -50%) rotate(170deg) scale(1.15) rotateY(-30deg); */
+  transform: translate(-50%, -50%) rotate(170deg) scale(1.15) rotateY(-30deg);
+  /*   animation: fireworkPseudo 2s infinite; */
+}
+
+.firework:nth-child(2) {
+  --x: 30vmin;
+}
+
+.firework:nth-child(2),
+.firework:nth-child(2)::before,
+.firework:nth-child(2)::after {
+  --color1: pink;
+  --color2: violet;
+  --color3: fuchsia;
+  --color4: orchid;
+  --color5: plum;
+  --color6: lavender;
+  --finalSize: 40vmin;
+  left: 30%;
+  top: 60%;
+  animation-delay: -0.25s;
+}
+
+.firework:nth-child(3) {
+  --x: -30vmin;
+  --y: -50vmin;
+}
+
+.firework:nth-child(3),
+.firework:nth-child(3)::before,
+.firework:nth-child(3)::after {
+  --color1: cyan;
+  --color2: lightcyan;
+  --color3: lightblue;
+  --color4: PaleTurquoise;
+  --color5: SkyBlue;
+  --color6: lavender;
+  --finalSize: 35vmin;
+  left: 70%;
+  top: 60%;
+  animation-delay: -0.4s;
+}
+
+/************************** home seciton css craker **************************/
+
+/* ++++++++++++++++++++++++++++++++++++++++++++ */
+
+.section-main {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background: var(--bg-color);
+  background-size: cover;
+  background-position: center;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 1.5rem 2.4rem;
+  padding: 2rem 10rem;
+}
+
+.section-main h1 {
+  font-size: 6rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  line-height: 8rem;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 10rem;
+  z-index: 999;
+  transition: 0.6s;
 }
 
-.logo {
+header.sticky {
+  background-color: var(--bg-color);
+  padding: 1.5rem 10rem;
+}
+
+header .menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header .menu a {
+  font-size: 1.6rem;
+  font-weight: 600;
+  text-decoration: none;
+  color: var(--white-color);
+  margin: 0 0.1rem;
+  padding: 0.5rem 1.5rem;
+  text-transform: uppercase;
+  border-radius: 1.5rem;
+  transition: 0.3s;
+  transition-property: color, background;
+}
+
+header .menu a:hover {
+  color: var(--black-color);
+  background: #fff;
+}
+
+header .btn {
+  font-size: 2.5rem;
+  cursor: pointer;
+  color: #fff;
+  display: none;
+}
+
+/********************* Home  *********************/
+/* hero left css  */
+.home {
+  background-color: var(--bg-color);
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+
+.home .container {
+  padding-top: 25rem;
+}
+
+.home .grid {
+  align-items: center;
+  gap: 5rem;
+}
+
+.home .home-left h1 {
+  color: var(--black-color);
+  font-size: 4rem;
+}
+.home .home-left h2 {
+  color: var(--black-color);
+  font-size: 6.5rem;
+  margin: 2rem 0;
+  color: var(--white-color);
+}
+
+.home .home-left h2 .type-color {
+  color: #2f2e43;
+}
+.home .home-left p {
+  color: var(--black-color);
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+/********** hero right css  **********/
+.home .home-right {
+  transform: scalex(-1);
+}
+
+/************** about section css  **************/
+.about {
+  position: relative;
+}
+.about .grid {
+  gap: 3rem;
+}
+.about-heading {
+  text-align: center;
+  color: var(--black-color);
+}
+.about-heading h3 {
+  font-size: 3.5rem;
+}
+.about-heading h2 {
+  font-size: 6rem;
+  margin-top: 2rem;
+  color: var(--bg-color);
+}
+
+/* about services cards css  */
+.about-card-data {
+  border: 1px solid var(--bg-color);
+  padding: 2rem 3rem;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  /* animation: bordermove 1s ease infinite; */
+}
+/* @keyframes bordermove {
+  0% {
+
+  }
+  100% {
+  }
+} */
+.about-card-data .about-no h4 {
+  font-size: 3.6rem;
+  background-color: var(--black-color);
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  text-align: center;
+  margin: 0 auto;
+  color: var(--bg-color);
+}
+
+.about-card-heading h3 {
+  font-size: 3rem;
+  padding: 1rem;
+  color: var(--bg-color);
+}
+
+.about-card-para p {
   font-size: 1.5rem;
 }
-
-ul {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-ul li {
-  margin-right: 2rem;
-}
-
-ul li a {
-  color: white;
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-ul li a:hover {
-  color: lightgreen;
-}
-
-.checkbtn {
-  font-size: 2rem;
-  color: white;
-  cursor: pointer;
-  display: none;
-}
-
-#check {
-  display: none;
-}
-
-/*++++++++++++++++++++ about section  ++++++++++++++++++++*/
