--- a/style/responsive.css
+++ b/style/responsive.css
@@ -326,6 +326,11 @@
     margin: 0 auto;
   }
   /* service  */
+  .footer {
+    background-position: center;
+    background-size: cover;
+    
+  }
 }
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px) {
